--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
 
+    <div id="root">
+        <p>Ciao sono {{firstName}}{{lastName}} e ho appena iniziato ad usare {{frameWork}} </p>
+    </div>
 
-  <script src="js/script.js"></script>  
+<script src="js/script.js"></script>  
 </body>
 </html>
